# bandwidthd

./: .gitignore  .travis.yml  CHANGELOG  Makefile  Makefile.BSD  Makefile.FreeBSD  Makefile.Solaris  Makefile.am  Makefile.in  README  README.Windows  TODO  aclocal.m4  bandwidthd-0.4.kdevprj  bandwidthd.c  bandwidthd.h  conf.l  conf.l.c  conf.tab.c  conf.tab.h  conf.y  configure.ac  configure.in  extensions.c  graph.c  lexer.l  parser.y  pgsql.c  schema.postgresql  sqlight.c
data/: Makefile.am  bandwidthd.conf  bandwidthd.conf.in  bandwidthd.init.sh.in
data/extensions/: Makefile.am
data/phphtdocs/: Makefile.am  bd_pgsql_purge.sh  config.conf  config.conf.rej  details.php  details.php.rej  failures.php  failures.php.orig  failures.php.rej  footer.php  footer.php.rej  graph.php  graph.php.rej  header.php  include.php  include.php.rej  index.php  location_statistics.php  location_statistics.php.rej  sensors.php  sensors.php.rej  signal_level.php  signal_level.php.rej  uptime.php  uptime.php.rej  xml.php
data/phphtdocs/manage/: Makefile.am  manage.php  manage_header.php  manage_sensors.php  manage_symbols.php
etc/: bandwidthd.conf
htdocs/: Subnet-10.0.0.0.html  Subnet-208.16.191.0.html  index.html
phphtdocs/: bd_pgsql_purge.sh  config.conf  details.php  failures.php  graph.php  include.php  index.php  location_statistics.php  maint.hourly  report.php  sensors.php  top20.php  uptime.php  xml.php
src/: Makefile.am  bandwidthd.c  bandwidthd.h  extensions.c  graph.c  parser.y  pgsql.c
