phphtdocsdir = $(docdir)/phphtdocs
dist_phphtdocs_DATA = \
	bandwidthd.css \
	bd_pgsql_purge.sh \
	config.conf \
	details.php \
	extensions.sql \
	failures.php \
	footer.php \
	geographic-management.sql \
	gpscoords.php \
	graph.php \
	header.php \
	include.php \
	index.php \
	legend.gif \
	location_statistics.php \
	logo.gif \
	maint.hourly \
	maint.weekly \
	sensors.php \
	signal_level.php \
	uptime.php \
	x.gif \
	xml.php

SUBDIRS = \
	manage
